[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/textures/arrow_right.png" type="Texture" id=1]
[ext_resource path="res://assets/textures/arrow_down.png" type="Texture" id=2]
[ext_resource path="res://objects/2d/editor/FoldableContainer.gd" type="Script" id=3]
[ext_resource path="res://assets/textures/add_pressed.png" type="Texture" id=4]
[ext_resource path="res://assets/textures/add.png" type="Texture" id=5]
[ext_resource path="res://assets/textures/add_hover.png" type="Texture" id=6]

[node name="FoldableContainer" type="PanelContainer"]
anchor_right = 1.0
margin_bottom = 39.0
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1273.0
margin_bottom = 32.0

[node name="HBoxContainer1" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1266.0
margin_bottom = 25.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer1"]
margin_top = 4.0
margin_right = 1238.0
margin_bottom = 21.0
mouse_filter = 0
size_flags_horizontal = 3

[node name="CheckButton" type="CheckBox" parent="VBoxContainer/HBoxContainer1"]
margin_left = 1242.0
margin_right = 1266.0
margin_bottom = 25.0
size_flags_horizontal = 8
custom_icons/checked = ExtResource( 2 )
custom_icons/unchecked = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
visible = false
margin_top = 29.0
margin_right = 1266.0
margin_bottom = 74.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1259.0
margin_bottom = 38.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 1252.0
margin_bottom = 31.0

[node name="Intend" type="Control" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 32.0
margin_bottom = 31.0
rect_min_size = Vector2( 32, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 36.0
margin_right = 1252.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 1216.0
margin_bottom = 27.0
size_flags_vertical = 0

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 1196.0
margin_bottom = 27.0
size_flags_horizontal = 3
placeholder_text = "添加..."

[node name="AddButton" type="TextureButton" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 1200.0
margin_top = 5.0
margin_right = 1216.0
margin_bottom = 21.0
size_flags_vertical = 4
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 6 )

[node name="Children" type="VBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 31.0
margin_right = 1216.0
margin_bottom = 31.0

[connection signal="gui_input" from="VBoxContainer/HBoxContainer1/Label" to="." method="_on_Label_gui_input"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer1/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="text_entered" from="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_AddEdit_text_entered"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/AddButton" to="." method="_on_AddButton_pressed"]
